--- a/index.html
+++ b/index.html
@@ -16,17 +16,30 @@
 
     <main class="content">
   <article class="profile">
-<img class="avatar" src="./images/photo-jak.jpg" alt="">
+<img class="profile__avatar" src="./images/photo-jak.jpg" alt="">
 <div class="profile__info">
   <h1 class="profile__title">Жак-Ив Кусто</h1>
   <p class="profile__subtitle">Исследователь океана</p>
+  <img class="edit-button" src="images/edit-button.svg" alt="кнопка редактировать">
 </div>
-
+<img class="add-button" src="./images/add-button.svg" alt="кнопка добавить">
+  </article>
+  <article class="popup">
+    <div class="popup__container">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form">
+        <input class="popup__name" type="text">
+        <input class="popup__job" type="text">
+        <button class="popup__button" type="submit">Сохранить</button>
+      </form>
+      <img class="popup__close" src="images/close-icon.png" alt="крестик закрытия">
+    </div>
   </article>
 
 
     </main>
   </div>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
