--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main class="content">
-  <article class="profile">
+  <section class="profile">
 <img class="profile__avatar" src="./images/photo-jak.jpg" alt="">
 <div class="profile__info">
   <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -23,7 +23,7 @@
   <img class="edit-button" src="images/edit-button.svg" alt="кнопка редактировать">
 </div>
 <img class="add-button" src="./images/add-button.svg" alt="кнопка добавить">
-  </article>
+  </section>
   <article class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
@@ -36,6 +36,38 @@
     </div>
   </article>
 
+  <section class="elements">
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск жопаапвыапывввввввввввв</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+
+
+  </section>
 
     </main>
   </div>
