--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="element">
       <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
       <div class="element__footer">
-        <p class="element__subtitle">Карачаевск</p>
+        <p class="element__subtitle">Карачаевск жопаапвыапывввввввввввв</p>
         <img class="element__like" src="./images/like.svg" alt="Лайк">
       </div>
     </div>
