--- a/index.html
+++ b/index.html
@@ -5,31 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Mestro</title>
+  <title>Mesto</title>
 </head>
 
 <body class="page">
   <div class="page__container">
+
     <header class="header">
-      <img class="logo" src="./images/logo.svg" alt="местро">
+      <img class="logo" src="./images/logo.svg" alt="Место">
     </header>
 
     <main class="content">
+
   <section class="profile">
-<img class="profile__avatar" src="./images/photo-jak.jpg" alt="">
+
+<img class="profile__avatar" src="./images/photo-jak.jpg" alt="Фото профиля">
+
 <div class="profile__info">
   <h1 class="profile__title">Жак-Ив Кусто</h1>
   <p class="profile__subtitle">Исследователь океана</p>
-  <img class="edit-button" src="images/edit-button.svg" alt="кнопка редактировать">
+  <button class="edit-button" type="button" aria-label="Редактировать">
+
 </div>
-<img class="add-button" src="./images/add-button.svg" alt="кнопка добавить">
+
+<button class="add-button" type="button" aria-label="Добавить карточку">
+
   </section>
   <article class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form">
-        <input class="popup__name" type="text">
-        <input class="popup__job" type="text" >
+        <input class="popup__name" type="text" maxlength="25">
+        <input class="popup__job" type="text" maxlength="35">
         <button class="popup__button" type="submit">Сохранить</button>
       </form>
       <img class="popup__close" src="images/close-icon.png" alt="крестик закрытия">
@@ -40,7 +47,7 @@
     <div class="element">
       <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
       <div class="element__footer">
-        <p class="element__subtitle">Карачаевск жопаапвыапывввввввввввв</p>
+        <p class="element__subtitle">Карачаево-Черкесск</p>
         <img class="element__like" src="./images/like.svg" alt="Лайк">
       </div>
     </div>
@@ -48,6 +55,20 @@
       <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
       <div class="element__footer">
         <p class="element__subtitle">Карачаевск жопаапвыапывввввввввввв</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск</p>
+        <img class="element__like" src="./images/like.svg" alt="Лайк">
+      </div>
+    </div>
+    <div class="element">
+      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+      <div class="element__footer">
+        <p class="element__subtitle">Карачаевск</p>
         <img class="element__like" src="./images/like.svg" alt="Лайк">
       </div>
     </div>
@@ -69,6 +90,9 @@
 
   </section>
 
+  <section class="footer">
+    <p class="footer__copyright">&COPY; 2020 Mesto Russia</p>
+  </section>
     </main>
   </div>
   <script src="./scripts/script.js"></script>
