--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
       <div class="element__footer">
         <p class="element__subtitle">Карачаево-Черкесск</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
+        <button type="button" class="element__like" aria-label="Лайк">
       </div>
     </div>
     <div class="element">
