--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <button class="add-button" type="button" aria-label="Добавить карточку">
 
   </section>
-  <article class="popup">
+  <div class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form">
@@ -41,53 +41,47 @@
       </form>
       <img class="popup__close" src="images/close-icon.png" alt="крестик закрытия">
     </div>
-  </article>
+  </div>
 
   <section class="elements">
-    <div class="element">
+    <ul class="element-container">
+    <li class="element">
       <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
       <div class="element__footer">
         <p class="element__subtitle">Карачаево-Черкесск</p>
         <button type="button" class="element__like" aria-label="Лайк">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
-      <div class="element__footer">
-        <p class="element__subtitle">Карачаевск жопаапвыапывввввввввввв</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
-      <div class="element__footer">
-        <p class="element__subtitle">Карачаевск</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
-      <div class="element__footer">
-        <p class="element__subtitle">Карачаевск</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
-      <div class="element__footer">
-        <p class="element__subtitle">Карачаевск</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
-      <div class="element__footer">
-        <p class="element__subtitle">Карачаевск</p>
-        <img class="element__like" src="./images/like.svg" alt="Лайк">
-      </div>
-    </div>
-
-
+        </li>
+        <li class="element">
+          <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+          <div class="element__footer">
+            <p class="element__subtitle">Карачаево-Черкесск</p>
+            <button type="button" class="element__like" aria-label="Лайк">
+            </li>
+            <li class="element">
+              <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+              <div class="element__footer">
+                <p class="element__subtitle">Карачаево-Черкесск</p>
+                <button type="button" class="element__like" aria-label="Лайк">
+                </li>
+                <li class="element">
+                  <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+                  <div class="element__footer">
+                    <p class="element__subtitle">Карачаево-Черкесск</p>
+                    <button type="button" class="element__like" aria-label="Лайк">
+                    </li>
+                    <li class="element">
+                      <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+                      <div class="element__footer">
+                        <p class="element__subtitle">Карачаево-Черкесск</p>
+                        <button type="button" class="element__like" aria-label="Лайк">
+                        </li>
+                        <li class="element">
+                          <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск">
+                          <div class="element__footer">
+                            <p class="element__subtitle">Карачаево-Черкесск</p>
+                            <button type="button" class="element__like" aria-label="Лайк">
+                            </li>
+    </ul>
   </section>
 
   <section class="footer">
