--- a/index.html
+++ b/index.html
@@ -18,55 +18,58 @@
     <main class="content">
 
       <section class="profile">
-
         <img class="profile__avatar" src="./images/photo-jak.jpg" alt="Фото профиля">
-
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
-          <button class="edit-button" type="button" title="Редактировать">
-
-        </div>
-        <button class="add-button" type="button" aria-label="Добавить карточку">
+          <button class="edit-button" type="button" title="Редактировать"></button>
+          </div>
+        <button class="add-button" type="button" aria-label="Добавить карточку"></button>
       </section>
 
       <section class="elements">
-        <ul class="element-container">
+        <ul class="elements-container">
           <li class="element">
             <img class="element__photo" src="./images/bryansk.jpg" alt="Брянск">
             <div class="element__footer">
               <p class="element__subtitle">Брянск</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+              </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/gym.jpg" alt="Спортивный зал">
             <div class="element__footer">
               <p class="element__subtitle">Спортивный зал</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+            </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/znak.jpg" alt="Белая зима">
             <div class="element__footer">
               <p class="element__subtitle">Зима</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+            </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/moscow-city.jpg" alt="Башня Эволюция">
             <div class="element__footer">
               <p class="element__subtitle">Evolution Tower</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+            </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/house.jpg" alt="Дом">
             <div class="element__footer">
               <p class="element__subtitle">Дом</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+            </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/maska.jpg" alt="Маска на статуе">
             <div class="element__footer">
               <p class="element__subtitle">Маска на статуе</p>
-              <button type="button" class="element__like" aria-label="Лайк">
+              <button type="button" class="element__like" aria-label="Лайк"></button>
+            </div>
           </li>
         </ul>
       </section>
