Осталось изменить кнопки

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
-          <button class="edit-button" type="button" title="Редактировать"></button>
-          </div>
-        <button class="add-button" type="button" aria-label="Добавить карточку"></button>
+          <button class="edit-button" type="button" title="Редактировать" aria-label="Редактировать"></button>
+        </div>
+        <button class="add-button" type="button" title="Добавить карточку" aria-label="Добавить карточку"></button>
       </section>
 
       <section class="elements">
@@ -34,7 +34,7 @@
             <div class="element__footer">
               <p class="element__subtitle">Брянск</p>
               <button type="button" class="element__like" aria-label="Лайк"></button>
-              </div>
+            </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/gym.jpg" alt="Спортивный зал">
@@ -83,7 +83,7 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form">
             <input class="popup__name" type="text" maxlength="25">
-            <input class="popup__job" type="text" maxlength="35">
+            <input class="popup__job" type="text" maxlength="45">
             <button class="popup__button" type="submit">Сохранить</button>
           </form>
           <img class="popup__close" src="images/close-icon.png" alt="крестик закрытия">
@@ -94,4 +94,5 @@
   </div>
   <script src="./scripts/script.js"></script>
 </body>
+
 </html>
