--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
-          <button class="edit-button" type="button" title="Редактировать" aria-label="Редактировать"></button>
+          <button class="profile__edit-button" type="button" title="Редактировать" aria-label="Редактировать"></button>
         </div>
-        <button class="add-button" type="button" title="Добавить карточку" aria-label="Добавить карточку"></button>
+        <button class="profile__add-button" type="button" title="Добавить карточку" aria-label="Добавить карточку"></button>
       </section>
 
       <section class="elements">
