--- a/index.html
+++ b/index.html
@@ -21,76 +21,80 @@
         <img class="profile__avatar" src="./images/photo-jak.jpg" alt="Фото профиля">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <p class="profile__subtitle">Исследователь океана</p>
           <button class="profile__edit-button" type="button" title="Редактировать" aria-label="Редактировать"></button>
+          <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button" title="Добавить карточку" aria-label="Добавить карточку"></button>
+
+
+        <button class="profile__add-button" type="button" title="Добавить карточку"
+          aria-label="Добавить карточку"></button>
       </section>
 
       <section class="elements">
-        <ul class="elements-container">
+        <ul class="elements__container">
           <li class="element">
             <img class="element__photo" src="./images/bryansk.jpg" alt="Брянск">
             <div class="element__footer">
-              <p class="element__subtitle">Брянск</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Брянск</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/gym.jpg" alt="Спортивный зал">
             <div class="element__footer">
-              <p class="element__subtitle">Спортивный зал</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Спортивный зал</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/znak.jpg" alt="Белая зима">
             <div class="element__footer">
-              <p class="element__subtitle">Зима</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Зима</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/moscow-city.jpg" alt="Башня Эволюция">
             <div class="element__footer">
-              <p class="element__subtitle">Evolution Tower</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Evolution Tower</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/house.jpg" alt="Дом">
             <div class="element__footer">
-              <p class="element__subtitle">Дом</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Дом</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
           <li class="element">
             <img class="element__photo" src="./images/maska.jpg" alt="Маска на статуе">
             <div class="element__footer">
-              <p class="element__subtitle">Маска на статуе</p>
-              <button type="button" class="element__like" aria-label="Лайк"></button>
+              <h2 class="element__subtitle">Маска на статуе</h2>
+              <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
         </ul>
       </section>
 
-      <section class="footer">
-        <p class="footer__copyright">&COPY; 2020 Mesto Russia</p>
-      </section>
-
-      <div class="popup">
-        <div class="popup__container">
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form">
-            <input class="popup__name" type="text" maxlength="25">
-            <input class="popup__job" type="text" maxlength="45">
-            <button class="popup__button" type="submit">Сохранить</button>
-          </form>
-          <img class="popup__close" src="images/close-icon.png" alt="крестик закрытия">
-        </div>
-      </div>
-
     </main>
+
+    <footer class="footer">
+      <p class="footer__copyright">&COPY; 2020 Mesto Russia</p>
+    </footer>
+
+    <div class="popup">
+      <div class="popup__container">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form" name="popupForm">
+          <input class="popup__input" type="text" name="profileName" maxlength="25">
+          <input class="popup__input" type="text" name="profileJob" maxlength="45">
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+      </div>
+    </div>
+
   </div>
   <script src="./scripts/script.js"></script>
 </body>
