--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <div class="popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popupForm">
-          <input class="popup__input" type="text" name="profileName" maxlength="25">
-          <input class="popup__input" type="text" name="profileJob" maxlength="45">
+        <form class="popup__form" name="popup-form">
+          <input class="popup__input" type="text" name="profile-name" maxlength="25">
+          <input class="popup__input" type="text" name="profile-job" maxlength="45">
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
