--- a/index.html
+++ b/index.html
@@ -32,48 +32,15 @@
 
       <section class="elements">
         <ul class="elements__container">
+          <template id="element-template">
           <li class="element">
-            <img class="element__photo" src="./images/bryansk.jpg" alt="Брянск">
+            <img class="element__photo" src="#">
             <div class="element__footer">
-              <h2 class="element__subtitle">Брянск</h2>
+              <h2 class="element__subtitle"></h2>
               <button class="element__like" type="button" aria-label="Лайк"></button>
             </div>
           </li>
-          <li class="element">
-            <img class="element__photo" src="./images/gym.jpg" alt="Спортивный зал">
-            <div class="element__footer">
-              <h2 class="element__subtitle">Спортивный зал</h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__photo" src="./images/znak.jpg" alt="Белая зима">
-            <div class="element__footer">
-              <h2 class="element__subtitle">Зима</h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__photo" src="./images/moscow-city.jpg" alt="Башня Эволюция">
-            <div class="element__footer">
-              <h2 class="element__subtitle">Evolution Tower</h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__photo" src="./images/house.jpg" alt="Дом">
-            <div class="element__footer">
-              <h2 class="element__subtitle">Дом</h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__photo" src="./images/maska.jpg" alt="Маска на статуе">
-            <div class="element__footer">
-              <h2 class="element__subtitle">Маска на статуе</h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
+        </template>
         </ul>
       </section>
 
@@ -89,7 +56,7 @@
         <form class="popup__form" name="popup-form">
           <input class="popup__input" type="text" name="profile-name" maxlength="25">
           <input class="popup__input" type="text" name="profile-job" maxlength="45">
-          <button class="popup__button" type="submit">Сохранить</button>
+          <button class="popup__button" type="submit" disabled>Сохранить</button>
         </form>
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
       </div>
