--- a/index.html
+++ b/index.html
@@ -32,15 +32,6 @@
 
       <section class="elements">
         <ul class="elements__container">
-          <template id="element-template">
-          <li class="element">
-            <img class="element__photo" src="#">
-            <div class="element__footer">
-              <h2 class="element__subtitle"></h2>
-              <button class="element__like" type="button" aria-label="Лайк"></button>
-            </div>
-          </li>
-        </template>
         </ul>
       </section>
 
@@ -62,7 +53,38 @@
       </div>
     </div>
 
-  </div>
+
+    <div class="popup popup_type_new-card">
+      <div class="popup__container">
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" name="popup-form">
+          <input class="popup__input" type="text" name="title-name">
+          <input class="popup__input" type="text" name="photo-link">
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+      </div>
+    </div>
+
+
+    <div class="x">
+      <div class="xo">
+        <figure class="photo">
+          <img class ="b" src="#">
+          <figcaption class="photo__subtitle"></figcaption>
+      </div>
+    </div>
+    <template id="element-template">
+      <li class="element">
+        <img class="element__photo" src="#">
+        <div class="element__footer">
+          <h2 class="element__subtitle"></h2>
+          <button class="element__like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+    </template>
+
+
   <script src="./scripts/script.js"></script>
 </body>
 
