--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="footer__copyright">&COPY; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
+    <div class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup-form">
@@ -49,7 +49,7 @@
           <input class="popup__input" type="text" name="profile-job" maxlength="45">
           <button class="popup__button" type="submit" disabled>Сохранить</button>
         </form>
-        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+        <button class="popup__close popup__close_type_edit" type="button" aria-label="Закрыть форму"></button>
       </div>
     </div>
 
@@ -58,28 +58,30 @@
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form" name="popup-form">
-          <input class="popup__input" type="text" name="title-name">
-          <input class="popup__input" type="text" name="photo-link">
-          <button class="popup__button" type="submit">Сохранить</button>
+          <input class="popup__input" type="text" name="title-name" placeholder="Название">
+          <input class="popup__input" type="text" name="photo-link" placeholder="Ссылка на картинку">
+          <button class="popup__button" type="submit">Создать</button>
         </form>
-        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+        <button class="popup__close popup__close_type_new-card" type="button" aria-label="Закрыть форму"></button>
       </div>
     </div>
 
 
-    <div class="x">
-      <div class="xo">
+    <div class="popup popup_type_image">
         <figure class="photo">
-          <img class ="b" src="#">
+          <img class ="photo__item" src="#">
           <figcaption class="photo__subtitle"></figcaption>
-      </div>
+          <button class="popup__close popup__close_type_image" type="button" aria-label="Закрыть форму"></button>
     </div>
+
     <template id="element-template">
       <li class="element">
         <img class="element__photo" src="#">
+        <button class="element__delete-icon" type="button" aria-label="Удалить"></button>
         <div class="element__footer">
           <h2 class="element__subtitle"></h2>
           <button class="element__like" type="button" aria-label="Лайк"></button>
+
         </div>
       </li>
     </template>
