--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="popup popup_type_image">
       <figure class="photo">
         <button class="photo__close" type="button" aria-label="Закрыть форму"></button>
-        <img class="photo__item" src="#" alt="">
+        <img class="photo__item" src="#">
         <figcaption class="photo__subtitle"></figcaption>
       </figure>
     </div>
