--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </li>
     </template>
 
-
+    <script src="./scripts/initial-cards.js"></script>
     <script src="./scripts/script.js"></script>
   </div>
 </body>
