--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <template id="element-template">
       <li class="element">
-        <img class="element__photo" src="#" alt="">
+        <img class="element__photo" src="#" alt="Фото">
         <button class="element__delete-icon" type="button" aria-label="Удалить"></button>
         <div class="element__footer">
           <h2 class="element__subtitle"></h2>
