--- a/index.html
+++ b/index.html
@@ -103,10 +103,7 @@
       </li>
     </template>
 
-    <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/script.js"></script>
-
+    <script type="module" src="./js/index.js"></script>
 
   </div>
 </body>
