--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup-form" novalidate>
+        <form class="popup__form popup__form_type_profile-form" name="popup-form" novalidate>
           <input class="popup__input popup__input_type_profile-name" type="text" id="profile-name" name="name"
             minlength="2" maxlength="40" placeholder="Имя" required>
           <div class="popup__error-container">
@@ -66,7 +66,7 @@
     <div class="popup popup_type_new-card">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" id="form-new-card" name="popup-form" novalidate>
+        <form class="popup__form popup__form_type_card-form" id="form-new-card" name="popup-form" novalidate>
           <input class="popup__input popup__input_type_card-name" type="text" id="card-name" name="image-name"
             placeholder="Название" minlength="2" maxlength="30" required>
           <div class="popup__error-container">
