--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </figure>
     </div>
 
-    <template id="element-template">
+    <template class="element-template" id="element-template">
       <li class="element">
         <img class="element__photo" src="#" alt="Фото">
         <button class="element__delete-icon" type="button" aria-label="Удалить"></button>
