сделать первое ревью проект 8

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 
     <div class="popup popup_type_image">
       <figure class="photo">
-        <button class="photo__close" type="button" aria-label="Закрыть форму"></button>
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <img class="photo__item" src="#" alt="Фото">
         <figcaption class="photo__subtitle"></figcaption>
       </figure>
