--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,23 @@
     </div>
 
 
+    <div class="popup popup_type_submit">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button class="popup__close" type="button" aria-label="Да"></button>
+    </div>
+
+
+    <div class="popup popup_type_avatar">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <input class="popup__input popup__input_type_avatar-link" type="url" id="avatar-link" name="avatar-link"
+            autocomplete="on" placeholder="Ссылка на картинку" required>
+          <div class="popup__error-container">
+            <span class="popup__input-error" id="card-link-error"></span>
+          </div>
+      <button class="popup__close" type="button" aria-label="Сохранить"></button>
+    </div>
+
+
     <div class="popup popup_type_image">
       <figure class="photo">
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
@@ -90,6 +107,8 @@
         <figcaption class="photo__subtitle"></figcaption>
       </figure>
     </div>
+
+
 
     <template class="element-template" id="element-template">
       <li class="element">
