почти сделать проект 9

--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,15 @@
 
 
     <div class="popup popup_type_submit">
+      <div class="popup__container">
       <h2 class="popup__title">Вы уверены?</h2>
       <button class="popup__close" type="button" aria-label="Да"></button>
     </div>
+  </div>
 
 
     <div class="popup popup_type_avatar">
+      <div class="popup__container">
       <h2 class="popup__title">Обновить аватар</h2>
       <input class="popup__input popup__input_type_avatar-link" type="url" id="avatar-link" name="avatar-link"
             autocomplete="on" placeholder="Ссылка на картинку" required>
@@ -98,7 +101,7 @@
           </div>
       <button class="popup__close" type="button" aria-label="Сохранить"></button>
     </div>
-
+  </div>
 
     <div class="popup popup_type_image">
       <figure class="photo">
