--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,8 @@
     <div class="popup popup_type_submit">
       <div class="popup__container">
       <h2 class="popup__title">Вы уверены?</h2>
-      <button class="popup__close" type="button" aria-label="Да"></button>
+      <button class="popup__button" type="submit">Да</button>
+      <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
     </div>
   </div>
 
