--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
       <section class="profile">
         <div class="profile__avatar-container">
-          <button class="profile__avatar-change" type="button" title="Добавить карточку"
+          <button class="profile__avatar-change" type="button" title="Изменить аватар"
         aria-label="Изменить аватар"></button>
         <img class="profile__avatar" src="#" alt="Фото профиля">
         </div>
@@ -61,7 +61,7 @@
           <div class="popup__error-container">
             <span class="popup__input-error" id="profile-job-error"></span>
           </div>
-          <button class="popup__button" type="submit">Сохранить</button>
+          <button class="popup__button popup__button_type_edit-profile" type="submit">Сохранить</button>
         </form>
         <button class="popup__close popup__close_type_edit" type="button" aria-label="Закрыть форму"></button>
       </div>
@@ -82,7 +82,7 @@
           <div class="popup__error-container">
             <span class="popup__input-error" id="card-link-error"></span>
           </div>
-          <button class="popup__button" type="submit" disabled>Создать</button>
+          <button class="popup__button popup__button_type_new-mesto" type="submit" disabled>Создать</button>
         </form>
         <button class="popup__close popup__close_type_new-card" type="button" aria-label="Закрыть форму"></button>
       </div>
@@ -92,7 +92,7 @@
     <div class="popup popup_type_submit">
       <div class="popup__container">
         <h2 class="popup__title">Вы уверены?</h2>
-        <button class="popup__button" type="submit">Да</button>
+        <button class="popup__button popup__button_type_yes" type="submit">Да</button>
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
       </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="popup__error-container">
           <span class="popup__input-error" id="avatar-link-error"></span>
         </div>
-        <button class="popup__button" type="submit">Сохранить</button>
+        <button class="popup__button popup__button_type_avatar" type="submit">Сохранить</button>
       </form>
         <button class="popup__close" type="button" aria-label="Сохранить"></button>
       </div>
