--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,9 @@
     <div class="popup popup_type_submit">
       <div class="popup__container">
         <h2 class="popup__title">Вы уверены?</h2>
+        <form class="popup__form" name="popup-form">
         <button class="popup__button popup__button_type_yes" type="submit">Да</button>
+      </form>
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
       </div>
     </div>
