--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,8 @@
 
       <section class="profile">
         <div class="profile__avatar-container">
-          <button class="profile__avatar-change" type="button" title="Изменить аватар"
-        aria-label="Изменить аватар"></button>
-        <img class="profile__avatar" src="#" alt="Фото профиля">
+          <button class="profile__avatar-change" type="button" title="Изменить аватар" aria-label="Изменить аватар">
+            <img class="profile__avatar" src="#" alt="Фото профиля"> </button>
         </div>
 
 
@@ -93,8 +92,8 @@
       <div class="popup__container">
         <h2 class="popup__title">Вы уверены?</h2>
         <form class="popup__form" name="popup-form">
-        <button class="popup__button popup__button_type_yes" type="submit">Да</button>
-      </form>
+          <button class="popup__button popup__button_type_yes" type="submit">Да</button>
+        </form>
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
       </div>
     </div>
@@ -104,13 +103,13 @@
       <div class="popup__container">
         <h2 class="popup__title">Обновить аватар</h2>
         <form class="popup__form popup__form_type_avatar-form" name="popup-form" novalidate>
-        <input class="popup__input popup__input_type_avatar-link" type="url" id="avatar-link" name="avatar-image"
-          autocomplete="on" placeholder="Ссылка на картинку" required>
-        <div class="popup__error-container">
-          <span class="popup__input-error" id="avatar-link-error"></span>
-        </div>
-        <button class="popup__button popup__button_type_avatar" type="submit">Сохранить</button>
-      </form>
+          <input class="popup__input popup__input_type_avatar-link" type="url" id="avatar-link" name="avatar-image"
+            autocomplete="on" placeholder="Ссылка на картинку" required>
+          <div class="popup__error-container">
+            <span class="popup__input-error" id="avatar-link-error"></span>
+          </div>
+          <button class="popup__button popup__button_type_avatar" type="submit">Сохранить</button>
+        </form>
         <button class="popup__close" type="button" aria-label="Сохранить"></button>
       </div>
     </div>
